--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -42,7 +42,7 @@
                             <nav id="mobile-menu">
                                 <ul>
 
-                                    <li class="active"><a href="index.html">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="about_us.html">About Us</a></li>
                                     <li><a href="course.html">Courses</a></li>
 
@@ -107,7 +107,7 @@
                     <p class="mb-30">
                         We simplify your career upgrade just like AEM simplifies the management of a website’s content.
                     </p>
-                    <a class="c-btn btn-round-02" href="">Contact Us</a>
+                    <a class="c-btn btn-round-02" href="contact_us.html">Contact Us</a>
                 </div>
             </div>
             <div class="offset-widget mb-30 pr-10">
