--- a/nxtecs/job.html
+++ b/nxtecs/job.html
@@ -131,7 +131,7 @@
 
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
-                <!--<li><a href="course.html">AEM</a></li>-->
+                <li><a href="course.html">Courses</a></li>
 
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
@@ -202,7 +202,7 @@
                 <button onclick="document.getElementById('id02').style.display='block'" type="button"
                     class="block">Apply Here</button>
 
-                <div id="id02" class="modal">
+                <div id="id02" class="modal" style="background-color: #EAF4F7;">
                     <span onclick="document.getElementById('id02').style.display='none'" class="close"
                         title="Close Modal" class="w3-button w3-display-topright">&times;</span>
                     <form class="modal-content" action="/action_page.php">
