--- a/nxtecs/job.html
+++ b/nxtecs/job.html
@@ -249,7 +249,7 @@
                             <br>
                             <div class="clearfix">
 
-                                <button type="submit" class="Confirmbtn">Confirm</button>
+                                <button type="submit2" class="Confirmbtn">Confirm</button>
                             </div>
                         </div>
                     </form>
