--- a/nxtecs/job.html
+++ b/nxtecs/job.html
@@ -202,7 +202,7 @@
                 <button onclick="document.getElementById('id02').style.display='block'" type="button"
                     class="block">Apply Here</button>
 
-                <div id="id02" class="modal" style="background-color: #EAF4F7;">
+                <div id="id02" class="modal">
                     <span onclick="document.getElementById('id02').style.display='none'" class="close"
                         title="Close Modal" class="w3-button w3-display-topright">&times;</span>
                     <form class="modal-content" action="/action_page.php">
@@ -247,9 +247,9 @@
                            <p>By creating an account you agree to our <a href="#"
                                 style="color:dodgerblue">Terms & Privacy</a>.</p>-->
                             <br>
-                            <div class="clearfix">
+                            <div class="clearfix" style="padding-left: 35%;">
 
-                                <button type="submit2" class="Confirmbtn">Confirm</button>
+                                <button type="submit" class="Confirmbtn" style="width: 50%;">Submit</button>
                             </div>
                         </div>
                     </form>
