--- a/nxtecs/curriculum.html
+++ b/nxtecs/curriculum.html
@@ -184,7 +184,7 @@
                                     <li>
                                         <div class="inner-content d-flex">
                                             <div class="inner-content-icon">
-                                                <i class="fal fa-book"></i>
+                                                <i class="fal fa-book-reader"></i>
                                             </div>
                                             <div class="inner-content-text">
                                                 <h6>18 Hours of Sessions</h6>
@@ -192,7 +192,7 @@
                                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                             <div class="inner-content-icon">
-                                                <i class="fal fa-book"></i>
+                                                <i class="fal fa-laptop"></i>
                                             </div>
                                             <div class="inner-content-text">
                                                 <h6>10 Hours of Labs</h6>
@@ -203,7 +203,7 @@
                                     <li>
                                         <div class="inner-content d-flex">
                                             <div class="inner-content-icon">
-                                                <i class="fal fa-book"></i>
+                                                <i class="fal fa-calendar-check"></i>
                                             </div>
                                             <div class="inner-content-text">
                                                 <h6>Flexible Schedules</h6>
@@ -222,7 +222,7 @@
                                     <li>
                                         <div class="inner-content d-flex">
                                             <div class="inner-content-icon">
-                                                <i class="fal fa-book"></i>
+                                                <i class="fal flaticon-24-hours"></i>
                                             </div>
                                             <div class="inner-content-text">
                                                 <h6>24/7 Lifetime Support</h6>
@@ -230,7 +230,7 @@
                                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                             <div class="inner-content-icon">
-                                                <i class="fal fa-book"></i>
+                                                <i class="fal fa-male"></i>
                                             </div>
                                             <div class="inner-content-text">
                                                 <h6>One-on-One Doubt Clearing</h6>
