--- a/nxtecs/curriculum.html
+++ b/nxtecs/curriculum.html
@@ -241,7 +241,7 @@
                                     <li>
                                         <div class="inner-content d-flex">
                                             <div class="inner-content-icon">
-                                                <i class="fal fa-book"></i>
+                                                <i class="fal fa-certificate"></i>
                                             </div>
                                             <div class="inner-content-text">
                                                 <h6>Certification Oriented Curriculum</h6>
