--- a/nxtecs/about_us.html
+++ b/nxtecs/about_us.html
@@ -41,8 +41,8 @@
                             <nav id="mobile-menu">
                                 <ul>
 
-                                    <li class="active"><a href="index.html">Home</a></li>
-                                    <li><a href="about_us.html">About Us</a></li>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li class="active"><a href="about_us.html">About Us</a></li>
                                     <li><a href="course.html">Courses</a></li>
 
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
