--- a/nxtecs/contact_us.html
+++ b/nxtecs/contact_us.html
@@ -42,7 +42,7 @@
                             <nav id="mobile-menu">
                                 <ul>
 
-                                    <li class="active"><a href="index.html">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="about_us.html">About Us</a></li>
                                     <li><a href="course.html">Courses</a></li>
 
@@ -62,7 +62,7 @@
                                         </ul>
                                     </li>-->
 
-                                    <li><a href="contact_us.html">Contact Us</a></li>
+                                    <li class="active"><a href="contact_us.html">Contact Us</a></li>
                                 </ul>
                             </nav>
                         </div>
