--- a/nxtecs/devops.html
+++ b/nxtecs/devops.html
@@ -46,11 +46,11 @@
                             <nav id="mobile-menu">
                                 <ul>
 
-                                    <li class="active"><a href="index.html">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="about_us.html">About Us</a></li>
                                     <li><a href="course.html">Courses</a></li>
 
-                                    <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
+                                    <li class="active"><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
                                             <li><a href="devops.html">DevOps</a></li>
                                             <li><a href="ae.html">AEM</a></li>
