--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -42,7 +42,7 @@
                             <nav id="mobile-menu">
                                 <ul>
 
-                                    <li><a href="index.html">Home</a></li>
+                                    <li class="active"><a href="index.html">Home</a></li>
                                     <li><a href="about_us.html">About Us</a></li>
                                     <li><a href="course.html">Courses</a></li>
 
