--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -87,7 +87,7 @@
             </div>
         </div>
     </header>
-    <!-- header-start -->
+    <!-- header-close -->
     <!-- slide-bar start -->
     <aside class="slide-bar">
         <div class="close-mobile-menu">
