--- a/nxtecs/about_us.html
+++ b/nxtecs/about_us.html
@@ -508,7 +508,7 @@
         </div>
         <!-- testimonial-area-end -->
 
-        <!-- blog-area-start -->
+        <!-- blog-area-start 
         <div class="blog-area pt-20 pb-20">
             <div class="container">
                 <div class="row">
@@ -581,7 +581,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
         <!-- blog-area-end -->
 
         <!-- brand-area-start -->
@@ -681,9 +681,9 @@
                             <br>
                             <h4>Mail us Here</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
-                            <form action="" method="post">
-                                <input type="email" name="email" style="width: 100%;">
-                                <input class="link1" type="submit" value="Submit">
+                            <form action="" method="post" style="display: flex;">
+                                <input type="email" name="email">
+                                <button type="submit" style="width: 60px;"><i class="far fa-long-arrow-right"></i></button>
                             </form>
 
                         </div>
