--- a/nxtecs/contact_us.html
+++ b/nxtecs/contact_us.html
@@ -218,20 +218,12 @@
                                     </div>
                                 </li>
                             </ul>
-                            <div class="contact-icon">
-                                <a href="#">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-youtube"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-linkedin"></i>
-                                </a>
-                            </div>
+                            <div class="footer-social-icon d-none d-md-inline-block">
+                                <a class="fot-fb active" href="#"><i class="fab fa-facebook"></i></a>
+                                <a class="fot-twitter" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="fot-google" href="#"><i class="fab fa-youtube"></i></a>
+                                <a class="fot-insta" href="#"><i class="fab fa-instagram"></i></a>
+                            </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         </div>
                     </div>
                     <div class="col-xl-7 col-lg-7 col-md-6">
@@ -356,8 +348,9 @@
                             <br>
                             <h4>Mail us Here</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
-                            <form action="" method="post">
-                                <input type="email" name="email"> <br><input class="link1" type="submit" value="Submit">
+                            <form action="" method="post" style="display: flex;">
+                                <input type="email" name="email">
+                                <button type="submit" style="width: 60px;"><i class="far fa-long-arrow-right"></i></button>
                             </form>
 
                         </div>
