--- a/nxtecs/course.html
+++ b/nxtecs/course.html
@@ -47,7 +47,7 @@
 
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
-                                            <li><a href="skills.html">DevOps</a></li>
+                                            <li><a href="devops.html">DevOps</a></li>
                                             <li><a href="ae.html">AEM</a></li>
                                             <li><a href="cybersecurity.html">Cyber Security</a></li>
                                             <li><a href="python.html">Python</a></li>
@@ -1132,9 +1132,9 @@
                             <br>
                             <h4>Mail us Here</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
-                            <form action="" method="post">
-                                <input type="email" name="email"> <br>
-                                <input class="link1" type="submit" value="Submit">
+                            <form action="" method="post" style="display: flex;">
+                                <input type="email" name="email">
+                                <button type="submit" style="width: 60px;"><i class="far fa-long-arrow-right"></i></button>
                             </form>
 
                         </div>
