--- a/nxtecs/curriculum.html
+++ b/nxtecs/curriculum.html
@@ -424,11 +424,10 @@
                             <br>
                             <h4>Mail us Here</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
-                            <form action="" method="post">
-                                <input type="email" name="email"> <br> 
-                                <input class="link1" type="submit" value="Submit">
+                            <form action="" method="post" style="display: flex;">
+                                <input type="email" name="email">
+                                <button type="submit" style="width: 60px;"><i class="far fa-long-arrow-right"></i></button>
                             </form>
-
                         </div>
 
                     </div>
