--- a/nxtecs/job.html
+++ b/nxtecs/job.html
@@ -316,7 +316,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post" style="display: flex;">
                                 <input type="email" name="email">
-                                <button type="submit" style="width: 60px;"><i class="far fa-long-arrow-right"></i></button>
+                                <button type="submit" style="width: 60px;"><i class="far fa-paper-plane"></i></button>
                             </form>
 
                         </div>
