--- a/nxtecs/about_us.html
+++ b/nxtecs/about_us.html
@@ -682,8 +682,8 @@
                             <h4>Mail us Here</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post" style="display: flex;">
-                                <input type="email" name="email">
-                                <button type="submit" style="width: 60px;"><i class="far fa-paper-plane"></i></button>
+                                <input type="email" name="email" style="width: 100%; height: 50px;">
+                                <button type="submit" style="width: 60px; background-color: #04AA; border: none;"><i class="far fa-paper-plane" style="color: white;"></i></button>
                             </form>
 
                         </div>
