--- a/nxtecs/contact_us.html
+++ b/nxtecs/contact_us.html
@@ -312,7 +312,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-6 footer-links">
+                        <div class="col-lg-2 col-md-6 footer-links">
                             <br>
                             <h4>Useful Links</h4>
                             <ul>
@@ -344,13 +344,13 @@
                             </ul>
                         </div>
 
-                        <div class="col-lg-3 col-md-6 footer-newsletter">
+                        <div class="col-lg-4 col-md-6 footer-newsletter">
                             <br>
                             <h4>Mail us Here</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
-                            <form action="" method="post" style="display: flex;">
-                                <input type="email" name="email">
-                                <button type="submit" style="width: 60px;"><i class="far fa-paper-plane"></i></button>
+                            <form action="" method="post" style="display: flex; width: 100%;">
+                                <input type="email" name="email" style="width: 100%; height: 50px;">
+                                <button type="submit" style="width: 60px; background-color: #04AA; border: none;"><i class="far fa-paper-plane" style="color: white;"></i></button>
                             </form>
 
                         </div>
