--- a/nxtecs/job.html
+++ b/nxtecs/job.html
@@ -199,7 +199,7 @@
                 • A minimum of a Master’s degree or equivalent in IT, Engineering or related field is required <br>
                 • Professional experience in a global organization is also required</p>
                 <br>
-                <button onclick="document.getElementById('id02').style.display='block'" type="button" style="width: 100px;"
+                <button onclick="document.getElementById('id02').style.display='block'" type="button" style="width: 100px; background: #ea5822;"
                     class="block">Apply Here</button>
 
                 <div id="id02" class="modal">
