--- a/nxtecs/course.html
+++ b/nxtecs/course.html
@@ -1134,7 +1134,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post" style="display: flex;">
                                 <input type="email" name="email" style="width: 100%; height: 50px;">
-                                <button type="submit" style="width: 60px; background-color: #04AA; border: none;"><i class="far fa-paper-plane" style="color: white;"></i></button>
+                                <button type="submit" style="width: 60px; background-color: #ea5822; border: none;"><i class="far fa-paper-plane" style="color: white;"></i></button>
                             </form>
 
                         </div>
