--- a/nxtecs/events.html
+++ b/nxtecs/events.html
@@ -417,7 +417,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post" style="display: flex;">
                                 <input type="email" name="email">
-                                <button type="submit" style="width: 60px; background-color: #ea5822;"><i class="far fa-paper-plane"></i></button>
+                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #ea5822;"><i class="far fa-paper-plane"></i></button>
                             </form>
 
                         </div>
