--- a/nxtecs/contact_us.html
+++ b/nxtecs/contact_us.html
@@ -350,7 +350,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post" style="display: flex; width: 100%;">
                                 <input type="email" name="email" style="width: 100%; height: 50px;">
-                                <button type="submit" style="width: 60px; background-color: #ea5822; border: none;"><i class="far fa-paper-plane" style="color: white;"></i></button>
+                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #ea5822; border: none;"><i class="far fa-paper-plane" style="color: white;"></i></button>
                             </form>
 
                         </div>
