--- a/nxtecs/dataanalyst.html
+++ b/nxtecs/dataanalyst.html
@@ -414,10 +414,10 @@
                                             alt="" /></a>
                                 </div>
                                 <p>
-                                    Bangalore <br>
-                                    Karnataka, INDIA<br><br>
-                                    <strong>Phone:</strong> +91 1234567890<br>
-                                    <strong>Email:</strong> info@NXTECS.com<br>
+                                    BANGALORE <br>
+                                    KARNATAKA, INDIA<br><br>
+                                    <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
+                                    <strong>Email:</strong> info@nxtecs.com<br>
                                 </p>
                                 
                             </div>
