--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -276,7 +276,7 @@
                                 <a href="job.html"><img src="assets/img/course/01.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
-                                <h4 class="text_align"><a href="">AEM Architects</a></h4>
+                                <h4 class="text_align"><a href="job.html">AEM Architects</a></h4>
 
                             </div>
                         </div>
@@ -287,7 +287,7 @@
                                 <a href="job.html"><img src="assets/img/course/02.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
-                                <h4 class="text_align"><a href="">AEM Developer </a></h4>
+                                <h4 class="text_align"><a href="job.html">AEM Developer </a></h4>
 
                             </div>
                         </div>
@@ -298,7 +298,7 @@
                                 <a href="job.html"><img src="assets/img/course/04.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
-                                <h4 class="text_align"><a href="">AEM manager</a></h4>
+                                <h4 class="text_align"><a href="job.html">AEM manager</a></h4>
 
                             </div>
                         </div>
@@ -309,7 +309,7 @@
                                 <a href="job.html"><img src="assets/img/course/03.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
-                                <h4 class="text_align"><a href="">AEM Full stack developers</a></h4>
+                                <h4 class="text_align"><a href="job.html">AEM Full stack developers</a></h4>
 
                             </div>
                         </div>
@@ -320,7 +320,7 @@
                                 <a href="job.html"><img src="assets/img/course/05.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
-                                <h4 class="text_align"><a href="">AEM QA senior consultant</a></h4>
+                                <h4 class="text_align"><a href="job.html">AEM QA senior consultant</a></h4>
 
                             </div>
                         </div>
