--- a/nxtecs/job.html
+++ b/nxtecs/job.html
@@ -249,7 +249,7 @@
                             <br>
                             <div class="clearfix" style="padding-left: 35%;">
 
-                                <button type="submit" class="Confirmbtn" style="width: 50%;">Submit</button>
+                                <button type="submit" class="Confirmbtn" style="width: 50%; background: #ea5822;">Submit</button>
                             </div>
                         </div>
                     </form>
