--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="./DIGITAL/index.html"></a></li>
             <li><a href="./jobportalsite/jobportal.html"></a></li>
             <li><a href="./nxtecs/index.html"> NXTECS </a></li>
-            <li><a href="./preview.colorlib.com/"> BOTIQUE </a></li>
+            <li><a href="./preview.colorlib.com/theme/instylr/index.html"> BOTIQUE </a></li>
         </ol>
     </section>
 </body>
