--- a/fastkart/front-end/index-2.html
+++ b/fastkart/front-end/index-2.html
@@ -170,7 +170,7 @@
                                 </span>
                             </button>
                             <a href="index.html" class="web-logo nav-logo">
-                                <img src="../assets/images/logo/2.png" class="img-fluid blur-up lazyload" alt="">
+                                <img src="" class="img-fluid blur-up lazyload" alt="">
                             </a>
 
                             <div class="middle-box">
