--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -704,7 +704,7 @@
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
                             <div class="section-title text-center mb-60">
-                                <span><i class="fal fa-ellipsis-h"></i> Artices & Tipes <i
+                                <span><i class="fal fa-ellipsis-h"></i> Articles & Tipes <i
                                         class="fal fa-ellipsis-h"></i></span>
                                 <h2>Latest News & Blog</h2>
                             </div>
