--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -264,7 +264,7 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
                         <div class="section-title text-center mb-60">
-                            <span><i class="fal fa-ellipsis-h"></i> Popular Jobs<i class="fal fa-ellipsis-h"></i></span>
+                            <!--<span><i class="fal fa-ellipsis-h"></i> Popular Jobs<i class="fal fa-ellipsis-h"></i></span>-->
                             <h2>Job opportunities </h2>
                         </div>
                     </div>
