--- a/nxtecs/about_us.html
+++ b/nxtecs/about_us.html
@@ -195,7 +195,7 @@
                     <div class="col-xl-6 col-lg-6 col-md-12">
                         <div class="about-wrapper mb-30">
                             <div class="section-title text-left mb-60">
-                                <span><i class="fal fa-ellipsis-h"></i> Introduced About Nxtecs</span>
+                               <!-- <span><i class="fal fa-ellipsis-h"></i> Introduced About Nxtecs</span> -->
                                 <h2>Welcome To Nxtecs</h2>
                                 <p class="left-line pos-rel pl-30">AEM not only simplifies the management of a website’s
                                     content but also simplifies your career path.</p>
@@ -300,7 +300,7 @@
                     <div class="col-xl-4 col-lg-5 col-md-12">
                         <div class="skill-wrapper">
                             <div class="section-title text-left mb-35">
-                                <span><i class="fal fa-ellipsis-h"></i> Who We Are</span>
+                               <!-- <span><i class="fal fa-ellipsis-h"></i> Who We Are</span> -->
                                 <h2>Institute Goals</h2>
                                 <p>Sed ut perspiciat unde omnis iste natus voluptate
                                     accusantium doloremque laudantium totam rem ape
@@ -356,8 +356,8 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
                         <div class="section-title text-center mb-65">
-                            <span><i class="fal fa-ellipsis-h"></i> Team Members <i
-                                    class="fal fa-ellipsis-h"></i></span>
+                           <!-- <span><i class="fal fa-ellipsis-h"></i> Team Members <i
+                                    class="fal fa-ellipsis-h"></i></span> -->
                             <h2>Expert Instructors</h2>
                         </div>
                     </div>
@@ -444,8 +444,8 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
                         <div class="section-title text-center section-title-white  mb-60">
-                            <span><i class="fal fa-ellipsis-h"></i> Students Feedback <i
-                                    class="fal fa-ellipsis-h"></i></span>
+                           <!-- <span><i class="fal fa-ellipsis-h"></i> Students Feedback <i
+                                    class="fal fa-ellipsis-h"></i></span> -->
                             <h2>What Our Students Say</h2>
                         </div>
                     </div>
@@ -683,7 +683,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post" style="display: flex;">
                                 <input type="email" name="email" style="width: 100%; height: 50px;">
-                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #ea5822; border: none;"><i class="far fa-paper-plane" style="color: white;"></i></button>
+                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356; border: none;"><i class="far fa-paper-plane" style="color: white;"></i></button>
                             </form>
 
                         </div>
