--- a/nxtecs/contact_us.html
+++ b/nxtecs/contact_us.html
@@ -178,7 +178,7 @@
                     <div class="col-xl-5 col-lg-5 col-md-6">
                         <div class="cta-content mb-30">
                             <div class="section-title text-left mb-20 pr-160">
-                                <span><i class="fal fa-ellipsis-h"></i> Quick Contact</span>
+                               <!-- <span><i class="fal fa-ellipsis-h"></i> Quick Contact</span> -->
                                 <h2>Get In Touch</h2>
                                 <p>The best way to get started is to stop thinking and get started. To get started reach
                                     me here</p>
@@ -245,8 +245,8 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
                         <div class="section-title text-center mb-60">
-                            <span><i class="fal fa-ellipsis-h"></i> Get In Touch <i
-                                    class="fal fa-ellipsis-h"></i></span>
+                           <!-- <span><i class="fal fa-ellipsis-h"></i> Get In Touch <i
+                                    class="fal fa-ellipsis-h"></i></span> -->
                             <h2>Leave Us Message</h2>
                         </div>
                     </div>
@@ -350,7 +350,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post" style="display: flex; width: 100%;">
                                 <input type="email" name="email" style="width: 100%; height: 50px;">
-                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #ea5822; border: none;"><i class="far fa-paper-plane" style="color: white;"></i></button>
+                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356; border: none;"><i class="far fa-paper-plane" style="color: white;"></i></button>
                             </form>
 
                         </div>
