--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -337,8 +337,8 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
                         <div class="section-title text-center mb-60">
-                            <span><i class="fal fa-ellipsis-h"></i> Photo & Album <i
-                                    class="fal fa-ellipsis-h"></i></span>
+                           <!-- <span><i class="fal fa-ellipsis-h"></i> Photo & Album <i
+                                    class="fal fa-ellipsis-h"></i></span> -->
                             <h2>Curriculum</h2>
                         </div>
                     </div>
@@ -507,8 +507,8 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
                         <div class="section-title text-center mb-65">
-                            <span><i class="fal fa-ellipsis-h"></i> Team Members <i
-                                    class="fal fa-ellipsis-h"></i></span>
+                           <!--  <span><i class="fal fa-ellipsis-h"></i> Team Members <i
+                                    class="fal fa-ellipsis-h"></i></span> -->
                             <h2>Expert Instructors</h2>
                         </div>
                     </div>
@@ -595,8 +595,8 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
                         <div class="section-title text-center mb-60">
-                            <span><i class="fal fa-ellipsis-h"></i> Latest Events <i
-                                    class="fal fa-ellipsis-h"></i></span>
+                           <!--  <span><i class="fal fa-ellipsis-h"></i> Latest Events <i
+                                    class="fal fa-ellipsis-h"></i></span> -->
                             <h2>Upcoming Events</h2>
                         </div>
                     </div>
@@ -634,8 +634,8 @@
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
                             <div class="section-title text-center section-title-white  mb-60">
-                                <span><i class="fal fa-ellipsis-h"></i> Students Feedback <i
-                                        class="fal fa-ellipsis-h"></i></span>
+                                <!--  <span><i class="fal fa-ellipsis-h"></i> Students Feedback <i
+                                        class="fal fa-ellipsis-h"></i></span> -->
                                 <h2>What Our Students Say</h2>
                             </div>
                         </div>
@@ -704,8 +704,8 @@
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
                             <div class="section-title text-center mb-60">
-                                <span><i class="fal fa-ellipsis-h"></i> Articles & Tipes <i
-                                        class="fal fa-ellipsis-h"></i></span>
+                               <!--  <span><i class="fal fa-ellipsis-h"></i> Articles & Tipes <i
+                                        class="fal fa-ellipsis-h"></i></span> -->
                                 <h2>Latest News & Blog</h2>
                             </div>
                         </div>
@@ -874,7 +874,7 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                                 <form action="" method="post" style="display: flex;">
                                     <input type="email" name="email">
-                                    <button class="btn-ftr" type="submit" style="width: 60px; background-color: #ea5822;"><i class="far fa-paper-plane"></i></button>
+                                    <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356;"><i class="far fa-paper-plane"></i></button>
                                 </form>
 
                             </div>
