--- a/nxtecs/about_us.html
+++ b/nxtecs/about_us.html
@@ -33,7 +33,7 @@
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo.png" style="width:170px;" alt="" /></a>
+                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="" /></a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -381,7 +381,7 @@
                                 </div>
                             </div>
                             <div class="team-text">
-                                <h4 class="text_align"><a href="">Subrat Kumar Sen</a></h4>
+                                <h4 class="text_align"><a href="">Subrat S</a></h4>
 
                             </div>
                         </div>
@@ -632,11 +632,11 @@
                         <div class="col-lg-3 col-md-6">
                             <div class="footer-info">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo.png" style="width:170px;"
+                                    <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;"
                                             alt="" /></a>
                                 </div>
                                 <p>
-                                    BANGALORE <br>
+                                    BANGALORE, <br>
                                     KARNATAKA, INDIA<br><br>
                                     <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
                                     <strong>Email:</strong> info@nxtecs.com<br>
