--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -493,9 +493,6 @@
                             </div>
                         </div>
                     </div>
-
-
-
                 </div>
             </div>
         </div>
@@ -532,7 +529,7 @@
                                 </div>
                             </div>
                             <div class="team-text">
-                                <h4 class="text_align"><a href="">Subrat Kumar Sen</a></h4>
+                                <h4 class="text_align"><a href="">Subrat S</a></h4>
 
                             </div>
                         </div>
