--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -126,7 +126,7 @@
             <ul id="mobile-menu-active">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li class="active"><a href="about_us.html">About Us</a></li>
-                <!--<li><a href="course.html">AEM</a></li>-->
+                <li><a href="course.html">Courses</a></li>
 
                 <li class="active"><a href="#">Skills <i class="far fa-angle-right"></i></a>
                     <ul class="sub-menu text-left">
