--- a/nxtecs/job.html
+++ b/nxtecs/job.html
@@ -38,7 +38,7 @@
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo.png" style="width:170px;" alt="" /></a>
+                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="" /></a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -199,7 +199,7 @@
                 • A minimum of a Master’s degree or equivalent in IT, Engineering or related field is required <br>
                 • Professional experience in a global organization is also required</p>
                 <br>
-                <button onclick="document.getElementById('id02').style.display='block'" type="button" style="width: 100px; background: #ea5822;"
+                <button onclick="document.getElementById('id02').style.display='block'" type="button" style="width: 100px; background: #002356;"
                     class="block">Apply Here</button>
 
                 <div id="id02" class="modal">
@@ -265,7 +265,7 @@
                         <div class="col-lg-3 col-md-6">
                             <div class="footer-info">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo.png" style="width:170px;"
+                                    <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;"
                                             alt="" /></a>
                                 </div>
                                 <p>
@@ -316,7 +316,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post" style="display: flex;">
                                 <input type="email" name="email">
-                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #ea5822;"><i class="far fa-paper-plane"></i></button>
+                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356;"><i class="far fa-paper-plane"></i></button>
                             </form>
 
                         </div>
