--- a/nxtecs/dataanalyst.html
+++ b/nxtecs/dataanalyst.html
@@ -38,7 +38,7 @@
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo.png" style="width:170px;" alt="" /></a>
+                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="" /></a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -410,7 +410,7 @@
                         <div class="col-lg-3 col-md-6">
                             <div class="footer-info">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo.png" style="width:170px;"
+                                    <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;"
                                             alt="" /></a>
                                 </div>
                                 <p>
