--- a/nxtecs/about_us.html
+++ b/nxtecs/about_us.html
@@ -152,11 +152,11 @@
     <!-- slide-bar end -->
     <main>
         <!--page-title-area start-->
-        <section class="page-title-area" style="background-image: url(assets/img/bg/page-title-bg-01.jpg);">
+        <section class="page-title-area" style="background-image: url(assets/img/banners/About_us_2.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 offset-xl-3">
-                        <div class="page-title text-center">
+                        <!--<div class="page-title text-center">
                             <h1>About Us</h1>
                             <div class="breadcrumb">
                                 <ul class="breadcrumb-list">
@@ -164,7 +164,7 @@
                                     <li><a class="active" href="#">About Us</a></li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
