--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -155,6 +155,7 @@
     <main>
         <!-- hero-area start -->
         <section class="hero-area pos-rel">
+            <!--<img class="img-fluid" src="assets/img/banners/Home-banner.jpg" alt=""> -->
             <div class="slider-img d-none d-sm-block">
                 <img class="img-fluid" src="assets/img/slider/01.png" alt="">
             </div>
