--- a/nxtecs/contact_us.html
+++ b/nxtecs/contact_us.html
@@ -153,11 +153,11 @@
     <!-- slide-bar end -->
     <main>
         <!--page-title-area start-->
-        <section class="page-title-area" style="background-image: url(assets/img/bg/page-title-bg-01.jpg);">
+        <section class="page-title-area" style="background-image: url(assets/img/banners/contact-us.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-8 offset-xl-2">
-                        <div class="page-title text-center">
+                        <!-- <div class="page-title text-center">
                             <h1>Contact Us</h1>
                             <div class="breadcrumb">
                                 <ul class="breadcrumb-list">
@@ -165,7 +165,7 @@
                                     <li><a class="active" href="#">Contact Us</a></li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
