--- a/nxtecs/cybersecurity.html
+++ b/nxtecs/cybersecurity.html
@@ -157,11 +157,11 @@
     <div class="body-overlay"></div>
     <!-- slide-bar end -->
     <main>
-        <section class="page-title-area" style="background-image: url(assets/img/bg/devops.jpg);">
+        <section class="page-title-area" style="background-image: url(assets/img/banners/Cyber-Security.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 offset-xl-3">
-                        <div class="page-title text-center">
+                       <!-- <div class="page-title text-center">
                             <h1>Cyber Security</h1>
                             <div class="breadcrumb">
                                 <ul class="breadcrumb-list">
@@ -169,7 +169,7 @@
                                     <li><a class="active" href="#">Cyber security</a></li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -383,24 +383,14 @@
                                         </div>
                                     </form>
                                 </div>
-
-
-
-
-
-
                             </div>
                         </div>
                     </div>
-
-
-
-
                 </div>
-
             </div>
         </section>
         <!-- End Team Section -->
+
         <footer id="footer">
             <div class="footer-top">
                 <div class="container">
