--- a/nxtecs/python.html
+++ b/nxtecs/python.html
@@ -157,7 +157,7 @@
     <div class="body-overlay"></div>
     <!-- slide-bar end -->
     <main>
-        <section class="page-title-area" style="background-image: url(assets/img/bg/devops.jpg);">
+        <section class="page-title-area" style="background-image: url(assets/img/banners/python.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 offset-xl-3">
