--- a/nxtecs/course.html
+++ b/nxtecs/course.html
@@ -822,8 +822,8 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
                         <div class="section-title text-center mb-65">
-                            <span><i class="fal fa-ellipsis-h"></i> Team Members <i
-                                    class="fal fa-ellipsis-h"></i></span>
+                           <!-- <span><i class="fal fa-ellipsis-h"></i> Team Members <i
+                                    class="fal fa-ellipsis-h"></i></span> -->
                             <h2>Expert Instructors</h2>
                         </div>
                     </div>
