--- a/nxtecs/dataanalyst.html
+++ b/nxtecs/dataanalyst.html
@@ -157,11 +157,11 @@
     <div class="body-overlay"></div>
     <!-- slide-bar end -->
     <main>
-        <section class="page-title-area" style="background-image: url(assets/img/bg/devops.jpg);">
+        <section class="page-title-area" style="background-image: url(assets/img/banners/Data\ Analyst.png);">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 offset-xl-3">
-                        <div class="page-title text-center">
+                       <!-- <div class="page-title text-center">
                             <h1>Data Analyst</h1>
                             <div class="breadcrumb">
                                 <ul class="breadcrumb-list">
@@ -169,7 +169,7 @@
                                     <li><a class="active" href="#">Data analyst</a></li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
