--- a/nxtecs/python.html
+++ b/nxtecs/python.html
@@ -161,7 +161,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 offset-xl-3">
-                        <div class="page-title text-center">
+                       <!-- <div class="page-title text-center">
                             <h1>Python</h1>
                             <div class="breadcrumb">
                                 <ul class="breadcrumb-list">
@@ -169,7 +169,7 @@
                                     <li><a class="active" href="#">Python</a></li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
