--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -155,8 +155,8 @@
     <main>
         <!-- hero-area start -->
         <section class="hero-area pos-rel">
-            <!--<img class="img-fluid" src="assets/img/banners/Home-banner.jpg" alt=""> -->
-            <div class="slider-img d-none d-sm-block">
+           <img class="img-fluid" src="assets/img/banners/Home-banner.jpg" alt="" style="padding-top: 110px;">
+             <!--<div class="slider-img d-none d-sm-block">
                 <img class="img-fluid" src="assets/img/slider/01.png" alt="">
             </div>
             <div class="hero-slider">
@@ -184,7 +184,7 @@
                                         <div class="col-xl-6">
                                             <div class="support d-flex align-items-center">
                                                 <div class="support-icon">
-                                                    <!-- <i class="fal fa-user-headset"></i> -->
+                                                     <i class="fal fa-user-headset"></i> 
                                                     <i class="flaticon-24-hours"></i>
                                                 </div>
                                                 <div class="support-text">
@@ -199,7 +199,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
         <!-- hero-area end -->
 
