--- a/fastkart/front-end/index.html
+++ b/fastkart/front-end/index.html
@@ -171,7 +171,7 @@
                                 </span>
                             </button>
                             <a href="index.html" class="web-logo nav-logo">
-                                <img src="../assets/images/logo/1.png" class="img-fluid blur-up lazyload" alt="">
+                                <img src="../assets/images/logo/1.png" class="img-fluid blur-up lazyload" alt="LOGO">
                             </a>
 
                             <div class="middle-box">
