--- a/nxtecs/about_us.html
+++ b/nxtecs/about_us.html
@@ -152,7 +152,7 @@
     <!-- slide-bar end -->
     <main>
         <!--page-title-area start-->
-        <section class="page-title-area" style="background-image: url(assets/img/banners/About_us_2.jpg);">
+        <section class="page-title-area" style="background-image: url(assets/img/banners/WhatsApp\ about\ .jpeg);">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 offset-xl-3">
