--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -155,7 +155,7 @@
     <main>
         <!-- hero-area start -->
         <section class="hero-area pos-rel">
-           <img class="img-fluid" src="assets/img/banners/Home-banner.jpg" alt="" style="padding-top: 110px;">
+           <img class="img-fluid" src="assets/img/banners/WhatsApp home .jpeg" alt="" style="padding-top: 110px;">
              <!--<div class="slider-img d-none d-sm-block">
                 <img class="img-fluid" src="assets/img/slider/01.png" alt="">
             </div>
