--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -155,7 +155,7 @@
     <main>
         <!-- hero-area start -->
         <section class="hero-area pos-rel">
-           <img class="img-fluid" src="assets/img/banners/WhatsApp home .jpeg" alt="" style="padding-top: 110px;">
+           <img class="img-fluid" src="assets/img/1920881/Home-banner.jpg" alt="" style="padding-top: 110px;">
              <!--<div class="slider-img d-none d-sm-block">
                 <img class="img-fluid" src="assets/img/slider/01.png" alt="">
             </div>
@@ -364,11 +364,11 @@
                             <div class="gallery-img pos-rel">
                                 <a href="curriculum.html"><img src="assets/img/gallery/img_1.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="">HTML</a></h3>
+                                    <h3><a href="curriculum.html">HTML</a></h3>
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="assets/img/gallery/img_1.jpg"><i
+                                    <a class="popup-image" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -379,11 +379,11 @@
                             <div class="gallery-img pos-rel">
                                 <a href="curriculum.html"><img src="assets/img/gallery/img_2.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="">Core JAVA</a></h3>
+                                    <h3><a href="curriculum.html">Core JAVA</a></h3>
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="assets/img/gallery/img_2.jpg"><i
+                                    <a class="popup-image" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -394,11 +394,11 @@
                             <div class="gallery-img pos-rel">
                                 <a href="curriculum.html"><img src="assets/img/gallery/img_3.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="">AEM Sling & dispatcher</a></h3>
+                                    <h3><a href="curriculum.html">AEM Sling & dispatcher</a></h3>
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="assets/img/gallery/img_3.jpg"><i
+                                    <a class="popup-image" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -409,11 +409,11 @@
                             <div class="gallery-img pos-rel">
                                 <a href="curriculum.html"><img src="assets/img/gallery/img_4.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="">Configuration</a></h3>
+                                    <h3><a href="curriculum.html">Configuration</a></h3>
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="assets/img/gallery/img_4.jpg"><i
+                                    <a class="popup-image" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -424,11 +424,11 @@
                             <div class="gallery-img pos-rel">
                                 <a href="curriculum.html"><img src="assets/img/gallery/img_5.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="">AEM templates</a></h3>
+                                    <h3><a href="curriculum.html">AEM templates</a></h3>
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="assets/img/gallery/img_5.jpg"><i
+                                    <a class="popup-image" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -439,11 +439,11 @@
                             <div class="gallery-img pos-rel">
                                 <a href="curriculum.html"><img src="assets/img/gallery/img_6.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="">AEM components </a></h3>
+                                    <h3><a href="curriculum.html">AEM components </a></h3>
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="assets/img/gallery/img_6.jpg"><i
+                                    <a class="popup-image" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -454,11 +454,11 @@
                             <div class="gallery-img pos-rel">
                                 <a href="curriculum.html"><img src="assets/img/gallery/img_7.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="">AEM workflows</a></h3>
+                                    <h3><a href="curriculum.html">AEM workflows</a></h3>
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="assets/img/gallery/img_7.jpg"><i
+                                    <a class="popup-image" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -469,11 +469,11 @@
                             <div class="gallery-img pos-rel">
                                 <a href="curriculum.html"><img src="assets/img/gallery/img_8.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="">AEM UI </a></h3>
+                                    <h3><a href="curriculum.html">AEM UI </a></h3>
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="assets/img/gallery/img_8.jpg"><i
+                                    <a class="popup-image" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -484,11 +484,11 @@
                             <div class="gallery-img pos-rel">
                                 <a href="curriculum.html"><img src="assets/img/gallery/img_9.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="">Capstone project</a></h3>
+                                    <h3><a href="curriculum.html">Capstone project</a></h3>
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="assets/img/gallery/img_9.jpg"><i
+                                    <a class="popup-image" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
