--- a/nxtecs/about_us.html
+++ b/nxtecs/about_us.html
@@ -152,7 +152,7 @@
     <!-- slide-bar end -->
     <main>
         <!--page-title-area start-->
-        <section class="page-title-area" style="background-image: url(assets/img/banners/WhatsApp\ about\ .jpeg);">
+        <section class="page-title-area" style="background-image: url(assets/img/1920881/About-Us-Banner.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 offset-xl-3">
