--- a/nxtecs/dataanalyst.html
+++ b/nxtecs/dataanalyst.html
@@ -157,7 +157,7 @@
     <div class="body-overlay"></div>
     <!-- slide-bar end -->
     <main>
-        <section class="page-title-area" style="background-image: url(assets/img/banners/Data\ Analyst.png);">
+        <section class="page-title-area" style="background-image: url(assets/img/1920881/data-analyst.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 offset-xl-3">
