--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -368,7 +368,7 @@
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="curriculum.html"><i
+                                    <a class="" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -383,7 +383,7 @@
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="curriculum.html"><i
+                                    <a class="" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -398,7 +398,7 @@
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="curriculum.html"><i
+                                    <a class="" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -413,7 +413,7 @@
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="curriculum.html"><i
+                                    <a class="" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -428,7 +428,7 @@
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="curriculum.html"><i
+                                    <a class="" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -443,7 +443,7 @@
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="curriculum.html"><i
+                                    <a class="" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -458,7 +458,7 @@
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="curriculum.html"><i
+                                    <a class="" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -473,7 +473,7 @@
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="curriculum.html"><i
+                                    <a class="" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -488,7 +488,7 @@
 
                                 </div>
                                 <div class="gallery-icon">
-                                    <a class="popup-image" href="curriculum.html"><i
+                                    <a class="" href="curriculum.html"><i
                                             class="far fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
