--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div>
-        <a target="_blank" href="">Anil's HTML github repository</a>
+        <a target="_blank" href="https://github.com/Anilchari/html-lesson">Anil's HTML github repository</a>
     </div>
 	<section>
         <ol>
