--- a/kinder/preview.colorlib.com/theme/kindergarten/index.html
+++ b/kinder/preview.colorlib.com/theme/kindergarten/index.html
@@ -91,7 +91,7 @@
                         <ul class="submenu">
                           <li><a href="blog.html">Blog</a></li>
                           <li><a href="blog_details.html">Blog Details</a></li>
-                          <li><a href="elements.html">Elements</a></li>
+                          <!--<li><a href="elements.html">Elements</a></li> -->
                         </ul>
                       </li>
                       <li><a href="contact.html">Contact</a></li>
@@ -527,7 +527,7 @@
                     </div>
                     <div class="founder-text">
                       <span>Jacson Miller</span>
-                      <p>Designer @Colorlib</p>
+                      <p>Designer </p>
                     </div>
                   </div>
                 </div>
@@ -548,7 +548,7 @@
                     </div>
                     <div class="founder-text">
                       <span>Jacson Miller</span>
-                      <p>Designer @Colorlib</p>
+                      <p>Designer </p>
                     </div>
                   </div>
                 </div>
